--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-code-generate",
-  "displayName": "Code Generator",
+  "displayName": "vscode-code-generate",
   "description": "根据模板生成代码",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "yehq",
   "engines": {
     "vscode": "^1.38.0"
