--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-code-generate",
   "displayName": "vscode-code-generate",
   "description": "根据模板生成代码",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "yehq",
   "engines": {
     "vscode": "^1.38.0"
@@ -40,7 +40,8 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "publish": "vsce publish"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
